Handle Api key validation
