# src/main/java/pl/zajacp/GetGameRecordHandler.java
@@ -9,6 +9,7 @@ import pl.zajacp.model.GameRecord;
 import pl.zajacp.repository.DynamoDbRepository;
 import pl.zajacp.repository.GamesLogRepository;
 import pl.zajacp.repository.ItemQueryKey;
+import pl.zajacp.rest.RestCommons;
 import pl.zajacp.shared.ObjMapper;
 
 import java.util.List;
@@ -22,10 +23,12 @@ import static pl.zajacp.rest.RequestParamValidator.DataType.INTEGER;
 import static pl.zajacp.rest.RequestParamValidator.ParamType.QUERY;
 import static pl.zajacp.rest.RequestParamValidator.RequiredParam;
 import static pl.zajacp.rest.RequestParamValidator.validateParameters;
+import static pl.zajacp.rest.RestCommons.*;
 import static pl.zajacp.rest.RestCommons.SERVER_ERROR_MESSAGE;
+import static pl.zajacp.rest.RestCommons.USER_HEADER;
 import static pl.zajacp.rest.RestCommons.asErrorJson;
 import static pl.zajacp.rest.RestCommons.getResponseEvent;
-import static pl.zajacp.rest.RestCommons.getUserFromHeader;
+import static pl.zajacp.rest.RestCommons.getHeaderValue;
 import static pl.zajacp.rest.RestCommons.getValidationFailedResponseEvent;
 
 @AllArgsConstructor
@@ -49,18 +52,17 @@ public class GetGameRecordHandler implements RequestHandler<APIGatewayProxyReque
 
         var responseEvent = getResponseEvent();
         try {
-            Map<String, String> validationErrors = validateParameters(requestEvent, REQUIRED_PARAMS);
+            if (!apiKeysMatch(requestEvent)) return getUnauthorizedResponseEvent();
 
-            if (!validationErrors.isEmpty()) {
-                return getValidationFailedResponseEvent(validationErrors);
-            }
+            Map<String, String> validationErrors = validateParameters(requestEvent, REQUIRED_PARAMS);
+            if (!validationErrors.isEmpty()) return getValidationFailedResponseEvent(validationErrors);
 
             Map<String, String> queryParams = Optional.ofNullable(requestEvent.getQueryStringParameters())
                     .orElse(Map.of());
 
             ItemQueryKey itemQueryKey = getGameRecordKey(
                     Long.valueOf(queryParams.get(TIMESTAMP_RANGE_KEY)),
-                    getUserFromHeader(requestEvent, GLOBAL_USER)
+                    getHeaderValue(requestEvent, USER_HEADER).orElse(GLOBAL_USER)
             );
 
             Optional<GameRecord> item = gameItemRepository.getItem(itemQueryKey);
